<resources>
    <string name="app_name">CascudoFerreiroMarioPDMD</string>
    <string name="preference_file_key">com.example.proyectoPDMD.PREFERENCE_FILE_KEY</string>
    <string name="login_btLogin">Iniciar Sesion</string>
    <string name="loginTieHintEmail">Email</string>
    <string name="loginTieHintPassword">Contraseña</string>
    <string name="loginTvHasCount">No tienes una cuenta?</string>
    <string name="loginTvTextCreateAccount">Creala</string>
    <string name="loginTvLogo">Logo</string>
    <string name="loginTvEmail">Email</string>
    <string name="loginTvPassword">Password</string>
    <string name="registerTieEmail">Email</string>
    <string name="registerTiePassword">Contraseña</string>
    <string name="registerTieNick">Usuario</string>
    <string name="registerTieBirthday">Fecha nacimiento</string>
    <string name="registerTvEmail">Email</string>
    <string name="registerTvConfirmarPassword">Confirmar contraseña</string>
    <string name="registerTvNick">Usuario</string>
    <string name="registerTvPassword">Contraseña</string>
    <string name="registerTvBirthday">Fecha nacimiento</string>
    <string name="registerBtRegister">Registrarse</string>
    <string name="registerTvLogo">Logo</string>
    <string name="FilmListFabMenuLabel">Añadir</string>
    <string name="FilmListFabOneLabel">Añadir pelicula</string>
    <string name="FilmListFabTwoLabel">Crear película</string>
    <string name="cardIvCaratula">Caratula</string>
    <string name="FilmDetailTvDuaracion">Duracion</string>
    <string name="FilmDetailTvTitulo">Titulo</string>
    <string name="FilmDetailTvGenero">Genero</string>
    <string name="FilmDetailTvDuracion">Duracion</string>
    <string name="FilmDetailETGenero">Género</string>
    <string name="FilmDetailRMText">\nMostrar mas</string>
    <string name="collapsingToolbarTitulo">Fondo pelicula</string>
    <string name="loginActivityEmailValidationError">Email no valido</string>
    <string name="loginActivityPasswordValidationError">Contraseña no valida</string>
    <string name="registerActivityIncorrectUser">Usuario no valido</string>
    <string name="recisterActivityInvalidEmail">Email no valido</string>
    <string name="registerActivityInvalidPassword">Contraseña no valida</string>
    <string name="registerActivityConfirmPasswordError">Las contraseñas no coinciden</string>
    <string name="FilmDetailSerachActivityItemMenuAddTitle">Añadir</string>
    <string name="filmDetailActivityPosterAlertDialogTitle">Url de la caraturla</string>
    <string name="filmDetailActvityPictureAlertDialogMessage">Introduce la URL de la imagen</string>
    <string name="AlertDialogPositiveButton">Aceptar</string>
    <string name="AlertDialogNegativeButton">Cancelar</string>
    <string name="filmDetailActivityBackgroundAlertDialogTitle">Url del fondo</string>
    <string name="FilmDetailActivityMenuItemDeleteTitle">Borrar</string>
    <string name="FilmDetailActivityMenuItemBrowserTitle">Abrir en el navegador</string>
    <string name="FilmDetailActivityMenuItemEditTitle">Editar</string>
    <string name="GoogleQueryString">https://www.google.com/search?q=</string>
    <string name="FilmDetailActivityDeleteMessage">Deseas elimanar la pelicula?</string>
    <string name="AlertDialogDeleteTitle">Alerta</string>
    <string name="FilmCreateActivityMenuItemCreate">Crear</string>
    <string name="FilmDetailTvValoracion">Valoración</string>
    <string name="AlertDialogDSaveChangesTitle">Guardar cambios</string>
    <string name="FilmDetailActivitySaveChangesMessage">¿Desea guardar los cambios?</string>
    <string name="stringNullIdMovie">Sin id</string>
    <string name="stringNullTitleMovie">Sin titulo</string>
    <string name="stringNullGenreMovie">Sin genero</string>
    <string name="stringNullRunTimeMovie">Sin duracion</string>
    <string name="stringNullRatingMovie">Sin valoraciones</string>
    <string name="stringNulDescriptionMovie">Sin sinopsis</string>
</resources>