<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_film_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/FilmDetailLayoutPadding"
    tools:context=".activities.FilmListFragmentManagerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_film_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/FilmDetaiIvCaratula"
            android:layout_width="@dimen/FilmDetailIvCaratulaWidth"
            android:layout_height="@dimen/FilmDetailIvCaratulaHeight"
            android:layout_marginRight="@dimen/FilmDetailIvCaratulaMarginRight"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.216"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/FilmDetailETTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/FilmDetailIvEditTextsMarginRight"
            android:enabled="false"
            android:fontFamily="sans-serif-black"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:scrollHorizontally="true"
            android:textColor="@color/pruebaFuente1"
            app:layout_constrainedHeight="false"
            app:layout_constrainedWidth="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/FilmDetailETGenero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/FilmDetailIvEditTextsMarginRight"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:textColor="@color/pruebaFuente1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/FilmDetailETTitulo"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/FilmDetailETDuracion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/FilmDetailIvEditTextsMarginRight"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:textColor="@color/pruebaFuente1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/FilmDetailETValoracion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/FilmDetailIvEditTextsMarginRight"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:textColor="@color/pruebaFuente1"
            app:layout_constraintBottom_toTopOf="@+id/FilmDetailTvSinopsis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TouchTargetSizeCheck" />

        <kr.co.prnd.readmore.ReadMoreTextView
            android:id="@+id/FilmDetailTvSinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="none"
            android:lineSpacingExtra="2dp"
            android:textColor="@color/pruebaFuente1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FilmDetaiIvCaratula"
            app:readMoreColor="@color/enabled_color"
            app:readMoreText="@string/FilmDetailRMText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:inputType="none"
            android:text="@string/FilmDetailTvTitulo"
            android:textColor="@color/pruebaFuente1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintStart_toEndOf="@+id/FilmDetaiIvCaratula"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="none"
            android:text="@string/FilmDetailETGenero"
            android:textColor="@color/pruebaFuente1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/FilmDetailETTitulo"
            app:layout_constraintTop_toBottomOf="@+id/FilmDetailETTitulo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="none"
            android:text="@string/FilmDetailTvDuracion"
            android:textColor="@color/pruebaFuente1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/FilmDetailETGenero"
            app:layout_constraintTop_toBottomOf="@+id/FilmDetailETGenero" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="none"
            android:text="@string/FilmDetailTvValoracion"
            android:textColor="@color/pruebaFuente1"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/FilmDetailETDuracion"
            app:layout_constraintTop_toBottomOf="@+id/FilmDetailETDuracion" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>